--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,28 @@
         <artifactId>openpdf</artifactId>
         <version>1.3.30</version>
     </dependency>
+    <dependency>
+        <groupId>org.icepdf.os</groupId>
+        <artifactId>icepdf-core</artifactId>
+        <version>6.2.2</version>
+        <exclusions>
+            <exclusion>
+                <groupId>javax.media</groupId>
+                <artifactId>jai_core</artifactId>
+            </exclusion>
+        </exclusions>
+    </dependency>
+    <dependency>
+        <groupId>org.icepdf.os</groupId>
+        <artifactId>icepdf-viewer</artifactId>
+        <version>6.2.2</version>
+        <exclusions>
+            <exclusion>
+                <groupId>javax.media</groupId>
+                <artifactId>jai_core</artifactId>
+            </exclusion>
+        </exclusions>
+    </dependency>
     </dependencies>
     <build>
         <plugins>
